--- a/projetos.html
+++ b/projetos.html
@@ -57,7 +57,7 @@
 
             <article class="card">
                 <div class="container-card-img">
-                    <img src="https://is5-ssl.mzstatic.com/image/thumb/Purple125/v4/86/f4/ee/86f4ee08-7284-a9af-5efc-5639da25bd46/source/512x512bb.jpg" alt="" class="img-card">
+                    <img src="img/pngtree-stopwatch-glyph-icon-vector-png-image_1879720.jpg" alt="" class="img-card">
                 </div>
                 <div class="container-content">
                     <h1 class="card-title">Alura Plus</h1>
