--- a/projetos.html
+++ b/projetos.html
@@ -44,13 +44,13 @@
 
             <article class="card">
                 <div class="container-card-img">
-                    <img src="https://is5-ssl.mzstatic.com/image/thumb/Purple125/v4/86/f4/ee/86f4ee08-7284-a9af-5efc-5639da25bd46/source/512x512bb.jpg" alt="" class="img-card">
+                    <img src="img/back.png" alt="" class="img-card">
                 </div>
                 <div class="container-content">
-                    <h1 class="card-title">Alura Plus</h1>
+                    <h1 class="card-title">Memory Game</h1>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <div class="container-btn">
-                        <a href="https://wagner-albuquerque.github.io/curso-aluraplus/" target="_blank" class="btn-project-card">Ver Projeto</a>
+                        <a href="https://wagner-albuquerque.github.io/Memory-Game/" target="_blank" class="btn-project-card">Ver Projeto</a>
                     </div>
                 </div>
             </article>
@@ -60,10 +60,10 @@
                     <img src="img/pngtree-stopwatch-glyph-icon-vector-png-image_1879720.jpg" alt="" class="img-card">
                 </div>
                 <div class="container-content">
-                    <h1 class="card-title">Alura Plus</h1>
+                    <h1 class="card-title">Cronômetro</h1>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <div class="container-btn">
-                        <a href="https://wagner-albuquerque.github.io/curso-aluraplus/" target="_blank" class="btn-project-card">Ver Projeto</a>
+                        <a href="https://wagner-albuquerque.github.io/meu-cron-metro/" target="_blank" class="btn-project-card">Ver Projeto</a>
                     </div>
                     
                 </div>
